fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -16,8 +16,8 @@
     --color-dark-brown1: #65431e;
 	--color-dark-brown2: #815d38;
     
-    --fs-xxxl: 3.5rem;
-	--fs-xxl: 3rem;
+    --fs-xxxl: 3rem;
+	--fs-xxl: 2.8rem;
 	--fs-xl: 2.5rem;
     --fs-l: 1rem;
     --fs-m: 0.8rem;
@@ -183,7 +183,7 @@ body {
 	font-weight: var(--fw-bold);
 	text-align: center;
 	height: 250px;
-	width: 400px;
+	width: 375px;
 	display: block;
 	color: var(--color-dark-brown1);
 	margin: auto;
@@ -199,7 +199,7 @@ body {
 
 .homepage-description {
 	text-align: center;
-	width: 350px;
+	width: 375px;
 	margin-top: 8em;
 	margin-bottom: 8em;
 	padding-left: 2em;
